--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,8 +183,9 @@ p, h1, h2, h3, h4, h5, h6 {
     background-color: var(--Rose-white);
 }
 
-.prep-container h3 {
+.prep-container h2 {
     color: var(--dark-raspberry);
+    font-size: 1.125rem;
     font-family: var(--font-name-2);
 }
 
